Implement testing on JDK9 (#47)
Introducing test.junit.jvm.modules test project specific system property for passing module related info to tests

Signed-off-by: Lukas Jungmann <lukas.jungmann@oracle.com>